--- a/enjeux.html
+++ b/enjeux.html
@@ -1,129 +1,107 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Jeux vidéo : Enjeux, chiffres &amp; sources | Ludus Mentis</title>
-  <meta name="description" content="État des lieux des usages numériques des jeunes, risques, et solutions éducatives d’accompagnement par le jeu vidéo.">
-  <link rel="stylesheet" href="assets/css/styles.css">
+    <meta charset="UTF-8">
+    <title>Jeux Vidéo : Comprendre les Enjeux pour Mieux Agir | Ludus Mentis</title>
+    <meta name="description" content="Analyse approfondie des enjeux liés à la pratique du jeu vidéo chez les jeunes : temps d'écran, isolement, gestion des émotions, chiffres clés et sources à l'appui.">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
 
-  <div id="header"></div>
+    <div id="header"></div>
 
-  <main class="container">
+    <main class="container">
 
-    <section class="section card">
-      <h1>Jeux vidéo : Enjeux, chiffres &amp; sources</h1>
-    </section>
+        <section class="section hero">
+            <h1>Le Jeu Vidéo : Une Réalité, des Enjeux, nos Solutions</h1>
+            <p>
+                Le jeu vidéo fait partie intégrante du quotidien de nos jeunes. C'est une source de plaisir et de socialisation, mais qui soulève des questions légitimes pour les parents et les éducateurs. Chez Ludus Mentis, nous ne voyons pas le jeu comme un problème, mais comme un formidable terrain d'apprentissage, à condition qu'il soit bien accompagné. Découvrez notre analyse des grands enjeux et les réponses concrètes que nous y apportons.
+            </p>
+        </section>
 
-    <section class="section card">
-      <h2>Synthèse éclair</h2>
-      <p>
-        Les données européennes et belges convergent : près de tous les adolescents sont connectés chaque jour ; un tiers joue quotidiennement, et plus d’un sur cinq dépasse quatre heures de jeu continu. En Belgique, les très jeunes enfants atteignent déjà des temps d’écran supérieurs aux recommandations officielles.<br>
-        Cette exposition prolongée comporte des risques physiques (fatigue, douleurs), mentaux (troubles du sommeil, dépendance) et sociaux (cyberharcèlement, pratiques commerciales agressives).<br>
-        Une académie d’accompagnement – espace où la pratique vidéoludique est guidée, équilibrée et ouverte à la discussion – constitue une solution pragmatique : elle n’abolit pas le problème, mais offre un cadre rassurant pour les parents et stimulant pour les jeunes.
-      </p>
-    </section>
+        <section class="section card">
+            <h2>Quelques chiffres pour cadrer le débat</h2>
+            <p>Avant d'explorer les enjeux en détail, voici quelques données qui illustrent l'ampleur du phénomène en Europe et en Belgique :</p>
+            <ul>
+                <li><strong>34 % des adolescents</strong> jouent chaque jour à des jeux vidéo.</li>
+                <li><strong>22 % des joueurs</strong> admettent jouer plus de 4 heures d'affilée.</li>
+                <li><strong>57 % des adolescents belges (10-17 ans)</strong> dépassent les 2 heures d’écran recommandées le week-end.</li>
+                <li><strong>12 % des adolescents européens</strong> sont considérés comme à risque de développer une pratique problématique (gaming disorder) selon l'OMS.</li>
+            </ul>
+        </section>
 
-    <section class="section card">
-      <h2>Chiffres clés</h2>
-      <ul>
-        <li><strong>97 % des jeunes (16-29 ans)</strong> utilisent Internet chaque jour en Europe <sup><a href="#source1">[1]</a></sup></li>
-        <li><strong>34 % des adolescents</strong> jouent chaque jour à des jeux vidéo <sup><a href="#source2">[2]</a></sup></li>
-        <li><strong>22 % des joueurs</strong> jouent plus de 4 heures d’affilée <sup><a href="#source2">[2]</a></sup></li>
-        <li><strong>57 % des adolescents belges (10-17 ans)</strong> dépassent 2 h d’écran le week-end <sup><a href="#source3">[3]</a></sup></li>
-        <li><strong>43 % des enfants belges (3-4 ans)</strong> passent plus d’1 h devant un écran chaque jour <sup><a href="#source3">[3]</a></sup></li>
-        <li><strong>12 % des adolescents européens</strong> à risque de gaming disorder (OMS 2024) <sup><a href="#source4">[4]</a></sup></li>
-        <li><strong>Marché belge du jeu vidéo :</strong> 698 M € (+12 % en 2024) <sup><a href="#source5">[5]</a></sup></li>
-      </ul>
-    </section>
+        <section class="section card">
+            <h2>Enjeu n°1 : Le juste équilibre entre vie numérique et vie réelle</h2>
+            <p>
+                <strong>Le contexte :</strong> L'hyperconnexion est une réalité. Quand les sessions de jeu s'étirent sur plus de 4 heures d'affilée pour un jeune sur cinq, l'équilibre avec les autres sphères de la vie (école, famille, sport, sommeil) peut être fragilisé.
+            </p>
+            <p>
+                <strong>Les risques concrets :</strong> Une pratique excessive peut entraîner une fatigue visuelle, des troubles du sommeil liés à l'exposition à la lumière bleue, mais aussi une sédentarité accrue. Sur le plan scolaire, la concentration peut être affectée, et le temps consacré aux devoirs ou aux activités en famille se réduit.
+            </p>
+            <p>
+                <strong>La réponse de Ludus Mentis :</strong> Nous ne luttons pas contre le temps d'écran, nous apprenons à le qualifier.
+                <ul>
+                    <li><strong>Sessions structurées :</strong> Nos ateliers ont une durée définie, incluant des moments de jeu, mais aussi des temps d'échange et de pause obligatoires.</li>
+                    <li><strong>Exergaming et pauses actives :</strong> Nous intégrons des activités physiques comme Just Dance ou Ring Fit pour montrer que bouger fait aussi partie de la culture du jeu.</li>
+                    <li><strong>Ateliers de sensibilisation :</strong> Nous abordons avec les jeunes les thèmes du sommeil, de la nutrition et de l'importance de l'équilibre des activités, pour qu'ils deviennent acteurs de leur propre bien-être.</li>
+                </ul>
+            </p>
+        </section>
 
-    <section class="section card">
-      <h2>Risques liés à un usage non encadré</h2>
+        <section class="section card">
+            <h2>Enjeu n°2 : De l'isolement en ligne à la coopération réelle</h2>
+            <p>
+                <strong>Le contexte :</strong> Le jeu en ligne est un espace de socialisation majeur. Cependant, les interactions via un casque et un micro, souvent anonymes, peuvent manquer de profondeur et parfois, de bienveillance. Le cyberharcèlement est une réalité dans les communautés de joueurs, créant un environnement qui peut être toxique.
+            </p>
+            <p>
+                <strong>Les risques concrets :</strong> Un jeune peut se sentir seul malgré ses nombreux "amis" en ligne, ou au contraire, s'enfermer dans une communauté virtuelle au détriment de ses relations sociales réelles. L'exposition à des comportements agressifs ou à de la triche peut biaiser sa perception des interactions sociales et de la compétition saine.
+            </p>
+            <p>
+                <strong>La réponse de Ludus Mentis :</strong> Nous faisons du jeu un prétexte à la rencontre et à l'apprentissage du vivre-ensemble.
+                <ul>
+                    <li><strong>Priorité à la coopération :</strong> Notre sélection de jeux (Overcooked, etc.) impose de communiquer et de s'entraider pour réussir. L'exploit individuel est moins valorisé que la réussite collective.</li>
+                    <li><strong>Une charte co-construite :</strong> Dès le début du cycle, nous élaborons une charte d'éthique avec les jeunes. Le respect, l'empathie et le fair-play ne sont pas des options, mais les règles du jeu.</li>
+                    <li><strong>Débriefings post-partie :</strong> Chaque session se termine par un cercle de parole, basé sur le cycle de Kolb, pour analyser les stratégies, les réussites, mais aussi les tensions. C'est là qu'on apprend à donner et recevoir un feedback constructif.</li>
+                </ul>
+            </p>
+        </section>
 
-      <h3>Physiques</h3>
-      <ul>
-        <li>Fatigue visuelle, maux de tête <sup><a href="#source6">[6]</a></sup></li>
-        <li>Douleurs musculo-squelettiques (“nintendinite”, dos, nuque) <sup><a href="#source7">[7]</a></sup></li>
-        <li>Moindre qualité et durée du sommeil <sup><a href="#source8">[8]</a></sup></li>
-      </ul>
+        <section class="section card">
+            <h2>Enjeu n°3 : Apprendre à gagner, mais surtout à perdre</h2>
+            <p>
+                <strong>Le contexte :</strong> Le jeu vidéo est un formidable vecteur d'émotions : la joie de la victoire, mais aussi la frustration de l'échec, le stress des moments décisifs. Mal gérées, ces émotions peuvent mener à des réactions de colère ("ragequit"), à une mauvaise estime de soi, et dans les cas les plus sérieux, à un rapport anxieux ou obsessionnel au jeu, un risque qui concerne jusqu'à 12% des adolescents.
+            </p>
+            <p>
+                <strong>Les risques concrets :</strong> L'OMS a reconnu le "gaming disorder" comme une dépendance comportementale. Sans aller jusqu'à cet extrême, une mauvaise gestion émotionnelle peut nuire à l'ambiance de jeu, se transposer dans la vie réelle et créer des conflits familiaux autour de la pratique.
+            </p>
+            <p>
+                <strong>La réponse de Ludus Mentis :</strong> Nous créons un environnement sécurisé pour apprendre à naviguer dans la tempête émotionnelle.
+                <ul>
+                    <li><strong>Valorisation de l'effort :</strong> Nous mettons l'accent sur la persévérance et la stratégie plutôt que sur le résultat brut. Un échec analysé est une victoire pour l'avenir.</li>
+                    <li><strong>Gestion du stress :</strong> Des ateliers spécifiques sont dédiés à la gestion du stress, avec des techniques de respiration ou de concentration applicables en jeu comme avant un examen.</li>
+                    <li><strong>Fair-play et maturité :</strong> L'accès à une future filière plus compétitive est conditionné non pas au niveau de jeu, mais à la démonstration de la maturité, du respect des autres et de la maîtrise de soi.</li>
+                </ul>
+            </p>
+        </section>
 
-      <h3>Mentaux et cognitifs</h3>
-      <ul>
-        <li>Risques de dépendance : gaming disorder reconnu par l’OMS <sup><a href="#source4">[4]</a></sup></li>
-        <li>Anxiété, dépression, stress <sup><a href="#source4">[4]</a></sup></li>
-        <li>Baisse de l’attention, surtout si le sommeil est altéré <sup><a href="#source4">[4]</a></sup></li>
-      </ul>
+        <section class="section sources card" id="sources">
+            <h2>Pour aller plus loin : Sources principales</h2>
+            <ol>
+              <li id="source1">European Commission – Digital Economy and Society Index, 2024. <a href="https://digital-strategy.ec.europa.eu/en/policies/desi" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source2">World Health Organization, « Teens and Screens » report, 2024. <a href="https://www.who.int/europe/news/item/23-05-2024-new-who-report-teens-screens-digital-media" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source3">Sciensano, Enquête de santé 2023. <a href="https://www.sciensano.be/fr/themes/surveillance-comportementale/sante-mentale-et-consommation-de-medias" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source4">World Health Organization, ICD‑11 – Gaming Disorder, 2019 &amp; OMS Europe 2024. <a href="https://icd.who.int/browse11/l-m/fr#/http://id.who.int/icd/entity/1448597234" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source5">L’Écho, « Le marché belge du jeu vidéo a bondi de 12 % », juin 2024. <a href="https://www.lecho.be/entreprises/technologie/le-marche-belge-du-jeu-video-a-bondi-de-12/10530322.html" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source6">Systematic review, Europe, « Video Games and Visual Fatigue in Youth », PMC, 2023. <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9886627/" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source7">« Gaming‑Related Musculoskeletal Disorders in Adolescents », PLOS ONE, 2022. <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0261897" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source8">« Screen Time and Sleep in Adolescents », PubMed, 2024. <a href="https://pubmed.ncbi.nlm.nih.gov/38524754/" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source9">European Parliamentary Research Service, « Cyberbullying Among Young People », 2023. <a href="https://www.europarl.europa.eu/thinktank/en/document/EPRS_BRI(2023)747569" target="_blank" rel="noopener">Lien</a></li>
+              <li id="source10">European Parliament, « Loot Boxes in Video Games and Gambling‑Like Elements », 2023. <a href="https://www.europarl.europa.eu/RegData/etudes/BRIE/2023/741420/EPRS_BRI(2023)741420_EN.pdf" target="_blank" rel="noopener">Lien</a></li>
+            </ol>
+        </section>
 
-      <h3>Sociaux</h3>
-      <ul>
-        <li>Cyberharcèlement en hausse <sup><a href="#source9">[9]</a></sup></li>
-        <li>Pratiques commerciales agressives (loot boxes, micro-transactions) <sup><a href="#source10">[10]</a></sup></li>
-      </ul>
-    </section>
-
-    <!-- POURQUOI UNE ACADÉMIE -------------------------------------------------->
-    <section class="section card" id="why-academy">
-      <h2>Pourquoi une académie d’accompagnement&nbsp;?</h2>
-
-      <table class="compare-table" aria-label="Besoins identifiés et réponses de l’académie">
-        <thead>
-          <tr>
-            <th scope="col">Besoins identifiés</th>
-            <th scope="col">Réponse de l’académie</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td scope="row">Limiter le temps &amp; la posture</td>
-            <td>Sessions de jeu chronométrées ; sensibilisation à l’ergonomie</td>
-          </tr>
-          <tr>
-            <td scope="row">Prévenir les dérives commerciales</td>
-            <td>Décodage critique des loot boxes ; ateliers parents-enfants</td>
-          </tr>
-          <tr>
-            <td scope="row">Favoriser l’équilibre vie active / numérique</td>
-            <td>Activités physiques ; défis « tech-free »</td>
-          </tr>
-          <tr>
-            <td scope="row">Renforcer les compétences sociales</td>
-            <td>Gestion des conflits ; esprit d’équipe ; communication</td>
-          </tr>
-          <tr>
-            <td scope="row">Impliquer les parents</td>
-            <td>Rapports de progression ; webinaires ; groupes de parole</td>
-          </tr>
-          <tr>
-            <td scope="row">Développer des talents</td>
-            <td>Découverte du game design ; streaming responsable ; orientation métiers</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <p style="margin-top:1.5em;">
-        <strong>L’académie Ludus Mentis n’est pas la solution unique.</strong><br>
-        Elle s’inscrit dans une démarche complémentaire des familles et de l’école, pour transformer une pratique massive et inévitable en opportunité éducative.
-      </p>
-    </section>
-
-  <section class="section sources card" id="sources">
-      <h2>Pour aller plus loin : Sources principales</h2>
-      <ol>
-        <li id="source1">European Commission – Digital Economy and Society Index, 2024. <a href="https://digital-strategy.ec.europa.eu/en/policies/desi" target="_blank" rel="noopener">Lien</a></li>
-        <li id="source2">World Health Organization, « Teens and Screens » report, 2024. <a href="https://www.who.int/europe/news/item/23-05-2024-new-who-report-teens-screens-digital-media" target="_blank" rel="noopener">Lien</a></li>
-        <li id="source3">Sciensano, Enquête de santé 2023. <a href="https://www.sciensano.be/fr/themes/surveillance-comportementale/sante-mentale-et-consommation-de-medias" target="_blank" rel="noopener">Lien</a></li>
-        <li id="source4">World Health Organization, ICD‑11 – Gaming Disorder, 2019 &amp; OMS Europe 2024. <a href="https://icd.who.int/browse11/l-m/fr#/http://id.who.int/icd/entity/1448597234" target="_blank" rel="noopener">Lien</a></li>
-        <li id="source5">L’Écho, « Le marché belge du jeu vidéo a bondi de 12 % », juin 2024. <a href="https://www.lecho.be/entreprises/technologie/le-marche-belge-du-jeu-video-a-bondi-de-12/10530322.html" target="_blank" rel="noopener">Lien</a></li>
-        <li id="source6">Systematic review, Europe, « Video Games and Visual Fatigue in Youth », PMC, 2023. <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9886627/" target="_blank" rel="noopener">Lien</a></li>
-        <li id="source7">« Gaming‑Related Musculoskeletal Disorders in Adolescents », PLOS ONE, 2022. <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0261897" target="_blank" rel="noopener">Lien</a></li>
-        <li id="source8">« Screen Time and Sleep in Adolescents », PubMed, 2024. <a href="https://pubmed.ncbi.nlm.nih.gov/38524754/" target="_blank" rel="noopener">Lien</a></li>
-        <li id="source9">European Parliamentary Research Service, « Cyberbullying Among Young People », 2023. <a href="https://www.europarl.europa.eu/thinktank/en/document/EPRS_BRI(2023)747569" target="_blank" rel="noopener">Lien</a></li>
-        <li id="source10">European Parliament, « Loot Boxes in Video Games and Gambling‑Like Elements », 2023. <a href="https://www.europarl.europa.eu/RegData/etudes/BRIE/2023/741420/EPRS_BRI(2023)741420_EN.pdf" target="_blank" rel="noopener">Lien</a></li>
-      </ol>
-    </section>
-  </main>
-  <div id="footer"></div>
-  <script src="assets/js/include.js"></script>
+    </main>
+    <div id="footer"></div>
+    <script src="assets/js/include.js"></script>
 </body>
 </html>
