--- a/enjeux.html
+++ b/enjeux.html
@@ -13,7 +13,7 @@
     <main class="container">
 
         <section class="section hero">
-            <h1>Le Jeu Vidéo : Une Réalité, des Enjeux, nos Solutions</h1>
+            <h1>Le jeu vidéo : une réalité, des enjeux, nos solutions</h1>
             <p>
                 Le jeu vidéo fait partie intégrante du quotidien de nos jeunes. C'est une source de plaisir et de socialisation, mais qui soulève des questions légitimes pour les parents et les éducateurs. Chez Ludus Mentis, nous ne voyons pas le jeu comme un problème, mais comme un formidable terrain d'apprentissage, à condition qu'il soit bien accompagné. Découvrez notre analyse des grands enjeux et les réponses concrètes que nous y apportons.
             </p>
