--- a/academie.html
+++ b/academie.html
@@ -2,46 +2,87 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Ludus Mentis – L'académie</title>
+  <title>Notre Académie : Le Programme Détaillé | Ludus Mentis</title>
+  <meta name="description" content="Découvrez le programme de l'académie Ludus Mentis : déroulement d'une session type, piliers pédagogiques, et compétences développées par votre enfant.">
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <div id="header"></div>
   <main class="container">
 
-    <section class="section card">
-      <h1>L’académie Ludus Mentis</h1>
+    <section class="section hero">
+      <h1>L'Académie : Bien plus que du jeu vidéo</h1>
       <p>
-        Notre académie, c’est un programme innovant mêlant jeu vidéo coopératif, ateliers éducatifs, et activités physiques ou créatives pour les jeunes de 10 à 15 ans.
+        Notre académie est un espace d'exploration où le jeu devient un prétexte pour grandir. Conçu pour les <strong>jeunes de 10 à 15 ans</strong>, notre programme unique tisse ensemble jeu coopératif, ateliers de développement personnel et activités créatives pour une expérience riche et équilibrée.
       </p>
     </section>
 
     <section class="section card">
-      <h2>À qui s’adresse l’académie ?</h2>
-      <ul>
-        <li>Aux jeunes qui aiment le jeu vidéo, mais souhaitent aller plus loin : mieux communiquer, coopérer, gagner en confiance…</li>
-        <li>Aux parents qui cherchent une activité ludique, éducative et encadrée par des pros</li>
-      </ul>
+      <h2>Le déroulement d'une session type chez Ludus Mentis</h2>
+      <p>Pour que vous puissiez vous projeter, voici à quoi ressemble un atelier classique au sein de l'académie :</p>
+      <ol>
+        <li>
+          <strong>Accueil et Échauffement (15 min) :</strong> On commence par un "ice-breaker" ou un petit jeu collectif hors écran pour briser la glace, se mettre en condition et définir l'objectif de la séance.
+        </li>
+        <li>
+          <strong>Session de Jeu Coopératif (45 min) :</strong> C'est le cœur de l'atelier. En équipe, les jeunes se lancent dans une mission sur un jeu comme <em>Overcooked</em> ou <em>Rocket League</em>. L'animateur n'est pas là pour donner les solutions, mais pour observer les dynamiques de groupe, les stratégies de communication et les réactions face au défi.
+        </li>
+        <li>
+          <strong>Débriefing et Analyse en Groupe (30 min) :</strong> C'est le moment le plus important. Guidés par l'animateur, les jeunes échangent sur leur partie. Qu'est-ce qui a bien fonctionné ? Quelles difficultés ont-ils rencontrées ? Comment auraient-ils pu mieux communiquer ? On applique ici notre méthode du <strong>cycle de Kolb</strong> pour transformer l'expérience de jeu en apprentissage concret.
+        </li>
+        <li>
+          <strong>Pause Active et Atelier Créatif (30 min) :</strong> On quitte les écrans ! Place à une activité physique (exergaming, jeux de ballon) ou à un atelier "tech-free" pour stimuler la créativité et le corps, et assurer un équilibre sain.
+        </li>
+      </ol>
     </section>
 
     <section class="section card">
-      <h2>Programme type</h2>
+      <h2>Nos piliers pédagogiques : ce qui fait notre différence</h2>
+      <p>Notre programme ne se contente pas d'occuper les jeunes. Il repose sur des fondations solides, conçues pour leur épanouissement.</p>
       <ul>
-        <li>Échauffement collectif, puis session de jeu coopératif</li>
-        <li>Analyse, retour d’expérience, partage en groupe</li>
-        <li>Pause active : activité physique, jeu “hors écran” ou atelier créatif</li>
+        <li>
+          <strong>La Pédagogie par l'Action :</strong> On apprend mieux en faisant. Le jeu n'est pas une récompense, c'est le support de l'apprentissage.
+        </li>
+        <li>
+          <strong>La Bienveillance avant la Performance :</strong> Il n'y a ni classement, ni jugement. Chaque jeune progresse à son rythme dans un environnement où l'erreur est perçue comme une opportunité d'apprendre.
+        </li>
+        <li>
+          <strong>L'Intelligence Collective :</strong> Nous privilégions des jeux où la réussite dépend de la coopération. Les jeunes découvrent que l'on est plus fort ensemble et apprennent à valoriser les compétences de chacun.
+        </li>
+        <li>
+          <strong>L'implication des Parents :</strong> Vous faites partie de l'aventure. Des rencontres et des bilans réguliers sont organisés pour assurer une parfaite transparence et aligner nos efforts avec les vôtres.
+        </li>
       </ul>
     </section>
-
-<section class="section card">
-  <h2>Quels résultats concrets&nbsp;?</h2>
-  <ul>
-    <li><strong>Compétences :</strong> progrès mesurés sur la communication, la gestion du stress, la confiance (questionnaires avant/après).</li>
-    <li><strong>Bien-être :</strong> meilleure qualité de sommeil, activité physique accrue, estime de soi renforcée (données jeunes & parents).</li>
-    <li><strong>Satisfaction :</strong> objectif : 85% de jeunes satisfaits ou très satisfaits du programme, et plus de 90% d’assiduité.</li>
-  </ul>
-</section>
-
+    
+    <section class="section card">
+      <h2>Les résultats concrets pour votre enfant</h2>
+      <p>Au-delà du plaisir de jouer, notre objectif est le développement de compétences humaines essentielles pour aujourd'hui et pour demain :</p>
+      <ul>
+        <li>
+          <strong>Plus de confiance en soi :</strong> En osant prendre des initiatives et en voyant l'impact de ses actions, le jeune renforce son estime de lui.
+        </li>
+        <li>
+          <strong>Une meilleure communication :</strong> Il apprend à exprimer ses idées clairement, à écouter celles des autres et à donner un feedback constructif.
+        </li>
+        <li>
+          <strong>Une gestion du stress améliorée :</strong> Il expérimente des situations de stress dans un cadre sécurisé et apprend à garder son calme pour atteindre un objectif.
+        </li>
+        <li>
+          <strong>Un véritable esprit d'équipe :</strong> Il développe son empathie et sa capacité à collaborer avec bienveillance pour un but commun.
+        </li>
+      </ul>
+    </section>
+    
+    <section class="section card" style="text-align:center;">
+        <h2>Prêt à rejoindre l'aventure ?</h2>
+        <p>
+            Les places sont limitées pour garantir un accompagnement de qualité.
+            <br>
+            Contactez-nous pour toute question ou pour procéder à une demande d'inscription.
+        </p>
+        <a href="contact.html" class="btn">Je veux plus d'infos</a>
+    </section>
 
   </main>
   <div id="footer"></div>
