--- a/concept.html
+++ b/concept.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Notre concept – Ludus Mentis</title>
+  <title>Notre Concept : Le Jeu Vidéo au Service du Développement | Ludus Mentis</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
@@ -11,50 +11,70 @@
 
   <main class="container">
 
-    <section class="section card">
-      <h1>Le jeu vidéo comme levier éducatif</h1>
+    <section class="section hero">
+      <h1>Transformer le Plaisir de Jouer en Compétences pour la Vie</h1>
       <p>
-        Ludus Mentis transforme le jeu vidéo en un espace d’apprentissage stimulant, bienveillant et structuré. Loin des clichés, notre approche repose sur une sélection rigoureuse de jeux collaboratifs et pédagogiques.
-      </p>
-      <p>
-        Encadrés par des animateurs formés, les jeunes développent des compétences psychosociales essentielles tout en jouant. Nous privilégions les jeux coopératifs, les défis en équipe, et les moments de réflexion après chaque session.
+        Chez Ludus Mentis, nous partons d'une conviction simple : la passion des jeunes pour le jeu vidéo est une énergie formidable. Plutôt que de la freiner, nous la canalisons. Nous avons créé un espace où le jeu devient un puissant levier d'apprentissage, encadré par des professionnels bienveillants.
       </p>
     </section>
 
     <section class="section card">
-      <h2>Ce que les enfants apprennent concrètement</h2>
+      <h2>Des Pixels aux Compétences Humaines</h2>
+      <p>
+          Au-delà des scores et des classements, chaque partie est une occasion de développer des savoir-être essentiels. Voici ce que votre enfant apprend concrètement avec nous :
+      </p>
       <ul>
-        <li>💬 Communiquer clairement avec leurs coéquipiers</li>
-        <li>🧘 Gérer leurs émotions dans des situations stressantes</li>
-        <li>🎯 Se fixer des objectifs et persévérer pour les atteindre</li>
-        <li>🫱 S’intégrer à un groupe et coopérer avec bienveillance</li>
+        <li>💬 <strong>Mieux communiquer :</strong> Exprimer ses idées clairement, écouter activement et se coordonner avec ses coéquipiers.</li>
+        <li>🧘 <strong>Gérer ses émotions :</strong> Apprendre à gérer la pression d'un défi, la frustration de l'échec et la joie du succès collectif.</li>
+        <li>🎯 <strong>Développer sa persévérance :</strong> Se fixer des objectifs en équipe, élaborer une stratégie et persévérer pour l'atteindre.</li>
+        <li>🫱 <strong>Renforcer l'esprit d'équipe :</strong> S’intégrer à un groupe, faire confiance et mériter la confiance des autres, avec respect et empathie.</li>
       </ul>
     </section>
 
     <section class="section card">
-   <h2>Des jeux choisis pour leurs vertus pédagogiques</h2>
-<p>
-  Nous n'utilisons pas n'importe quels jeux. Notre sélection privilégie la coopération et la communication. Par exemple :
-  <ul>
-    <li>
-      <strong>Overcooked :</strong> un jeu de cuisine chaotique qui impose une communication et une coordination sans faille pour réussir en équipe.
-    </li>
-    <li>
-      <strong>Keep Talking and Nobody Explodes :</strong> un joueur doit désamorcer une bombe en suivant les instructions des autres. L'écoute et la clarté sont les clés de la survie !
-    </li>
-  </ul>
-  Ces jeux ne sont que des prétextes pour apprendre à mieux interagir et résoudre des problèmes ensemble.
-</p>
+      <h2>Nos Outils Pédagogiques : Des Jeux Triés sur le Volet</h2>
+      <p>
+        Tous les jeux ne se valent pas. Nous sélectionnons rigoureusement des titres reconnus pour leur potentiel coopératif et éducatif. Ce ne sont pas des "jeux éducatifs" classiques, mais de vrais jeux populaires, utilisés comme supports d'apprentissage :
+      </p>
+      <ul>
+        <li>
+          <strong>Overcooked :</strong> Un jeu de cuisine frénétique qui est une véritable masterclass en communication et en gestion du stress sous pression. Impossible de réussir sans s'entraider.
+        </li>
+        <li>
+          <strong>Keep Talking and Nobody Explodes :</strong> Le jeu de communication par excellence. Un joueur a la bombe, les autres ont le manuel. L'écoute et la clarté sont une question de survie (virtuelle) !
+        </li>
+        <li>
+            <strong>Rocket League :</strong> Derrière ce jeu de "voitures-foot" se cache un besoin constant d'anticipation, de positionnement et de communication non-verbale pour fonctionner en équipe.
+        </li>
+      </ul>
     </section>
 
     <section class="section card">
-      <h2>Une vision à long terme</h2>
+        <h2>Comment le jeu devient-il apprentissage ?</h2>
+        <p>
+            C'est là que réside notre secret : <strong>l'accompagnement humain</strong>. Le jeu n'est que la première étape.
+        </p>
+        <p>
+            Chaque session de jeu est suivie d'un <strong>débriefing en groupe</strong>, mené par nos animateurs formés. C'est un moment d'échange où l'on met des mots sur ce qui a été vécu : "Comment aurions-nous pu mieux nous organiser ?", "Qu'as-tu ressenti à ce moment précis ?". C'est en reliant l'action (le jeu) à la réflexion (le débrief) que les compétences s'ancrent durablement.
+        </p>
+    </section>
+
+    <section class="section card">
+      <h2>Notre Vision : Bâtir des Champions de la Vie, puis de l'Esport</h2>
       <p>
-        Après une première phase “académie” axée sur le bien-être et les compétences sociales, Ludus Mentis envisage d’ouvrir une filière esport plus compétitive.
+        Notre première mission est de construire des bases solides : bien-être, confiance en soi et intelligence collective. C'est la vocation de notre Académie.
       </p>
       <p>
-        Cette filière sera accessible uniquement aux jeunes ayant démontré leur fair-play, leur persévérance et leur maturité numérique. Pour nous, la performance, la santé et l’équilibre sont indissociables.
+        Dans un second temps, Ludus Mentis ambitionne d'ouvrir une filière esport plus compétitive. Mais l'accès à cette filière sera sélectif, non pas sur le niveau de jeu, mais sur les qualités humaines : seuls les jeunes ayant démontré un fair-play exemplaire, une grande maturité et une bonne gestion de leurs émotions pourront y accéder. Pour nous, la santé et l'équilibre primeront toujours sur la performance.
       </p>
+    </section>
+    
+    <section class="section card" style="text-align:center;">
+        <h2>Curieux de voir notre programme en action ?</h2>
+        <p>
+            Découvrez en détail comment se déroule un atelier au sein de notre académie.
+        </p>
+        <a href="academie.html" class="btn">Explorer l'Académie</a>
     </section>
 
   </main>
