--- a/concept.html
+++ b/concept.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Notre Concept : Le Jeu Vidéo au Service du Développement | Ludus Mentis</title>
+  <title>Notre Concept : Le jeu vidéo au service du développement | Ludus Mentis</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
@@ -12,14 +12,14 @@
   <main class="container">
 
     <section class="section hero">
-      <h1>Transformer le Plaisir de Jouer en Compétences pour la Vie</h1>
+      <h1>Transformer le plaisir de jouer en compétences pour la vie</h1>
       <p>
         Chez Ludus Mentis, nous partons d'une conviction simple : la passion des jeunes pour le jeu vidéo est une énergie formidable. Plutôt que de la freiner, nous la canalisons. Nous avons créé un espace où le jeu devient un puissant levier d'apprentissage, encadré par des professionnels bienveillants.
       </p>
     </section>
 
     <section class="section card">
-      <h2>Des Pixels aux Compétences Humaines</h2>
+      <h2>Des Pixels aux compétences humaines</h2>
       <p>
           Au-delà des scores et des classements, chaque partie est une occasion de développer des savoir-être essentiels. Voici ce que votre enfant apprend concrètement avec nous :
       </p>
@@ -32,7 +32,7 @@
     </section>
 
     <section class="section card">
-      <h2>Nos Outils Pédagogiques : Des Jeux Triés sur le Volet</h2>
+      <h2>Nos outils pédagogiques : Des Jeux Triés sur le Volet</h2>
       <p>
         Tous les jeux ne se valent pas. Nous sélectionnons rigoureusement des titres reconnus pour leur potentiel coopératif et éducatif. Ce ne sont pas des "jeux éducatifs" classiques, mais de vrais jeux populaires, utilisés comme supports d'apprentissage :
       </p>
