--- a/academie.html
+++ b/academie.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Notre Académie : Le Programme Détaillé | Ludus Mentis</title>
+  <title>Notre académie : le programme détaillé | Ludus Mentis</title>
   <meta name="description" content="Découvrez le programme de l'académie Ludus Mentis : déroulement d'une session type, piliers pédagogiques, et compétences développées par votre enfant.">
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -11,7 +11,7 @@
   <main class="container">
 
     <section class="section hero">
-      <h1>L'Académie : Bien plus que du jeu vidéo</h1>
+      <h1>L'académie : bien plus que du jeu vidéo</h1>
       <p>
         Notre académie est un espace d'exploration où le jeu devient un prétexte pour grandir. Conçu pour les <strong>jeunes de 10 à 15 ans</strong>, notre programme unique tisse ensemble jeu coopératif, ateliers de développement personnel et activités créatives pour une expérience riche et équilibrée.
       </p>
