--- a/concept.html
+++ b/concept.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Notre Concept : Le jeu vidéo au service du développement | Ludus Mentis</title>
+  <title>Notre concept : le jeu vidéo au service du développement | Ludus Mentis</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
     </section>
 
     <section class="section card">
-      <h2>Des Pixels aux compétences humaines</h2>
+      <h2>Des pixels aux compétences humaines</h2>
       <p>
           Au-delà des scores et des classements, chaque partie est une occasion de développer des savoir-être essentiels. Voici ce que votre enfant apprend concrètement avec nous :
       </p>
@@ -32,7 +32,7 @@
     </section>
 
     <section class="section card">
-      <h2>Nos outils pédagogiques : Des Jeux Triés sur le Volet</h2>
+      <h2>Nos outils pédagogiques : des jeux triés sur le volet</h2>
       <p>
         Tous les jeux ne se valent pas. Nous sélectionnons rigoureusement des titres reconnus pour leur potentiel coopératif et éducatif. Ce ne sont pas des "jeux éducatifs" classiques, mais de vrais jeux populaires, utilisés comme supports d'apprentissage :
       </p>
@@ -60,7 +60,7 @@
     </section>
 
     <section class="section card">
-      <h2>Notre Vision : Bâtir des Champions de la Vie, puis de l'Esport</h2>
+      <h2>Notre vision : bâtir des champions de la vie, puis de l'esport</h2>
       <p>
         Notre première mission est de construire des bases solides : bien-être, confiance en soi et intelligence collective. C'est la vocation de notre Académie.
       </p>
