--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Ludus Mentis – Contact</title>
+  <title>Ludus Mentis – contact</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
