--- a/enjeux.html
+++ b/enjeux.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Jeux Vidéo : Comprendre les Enjeux pour Mieux Agir | Ludus Mentis</title>
+    <title>Jeux vidéo : comprendre les enjeux pour mieux agir | Ludus Mentis</title>
     <meta name="description" content="Analyse approfondie des enjeux liés à la pratique du jeu vidéo chez les jeunes : temps d'écran, isolement, gestion des émotions, chiffres clés et sources à l'appui.">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -31,7 +31,7 @@
         </section>
 
         <section class="section card">
-            <h2>Enjeu n°1 : Le juste équilibre entre vie numérique et vie réelle</h2>
+            <h2>Enjeu n°1 : le juste équilibre entre vie numérique et vie réelle</h2>
             <p>
                 <strong>Le contexte :</strong> L'hyperconnexion est une réalité. Quand les sessions de jeu s'étirent sur plus de 4 heures d'affilée pour un jeune sur cinq, l'équilibre avec les autres sphères de la vie (école, famille, sport, sommeil) peut être fragilisé.
             </p>
@@ -49,7 +49,7 @@
         </section>
 
         <section class="section card">
-            <h2>Enjeu n°2 : De l'isolement en ligne à la coopération réelle</h2>
+            <h2>Enjeu n°2 : de l'isolement en ligne à la coopération réelle</h2>
             <p>
                 <strong>Le contexte :</strong> Le jeu en ligne est un espace de socialisation majeur. Cependant, les interactions via un casque et un micro, souvent anonymes, peuvent manquer de profondeur et parfois, de bienveillance. Le cyberharcèlement est une réalité dans les communautés de joueurs, créant un environnement qui peut être toxique.
             </p>
@@ -67,7 +67,7 @@
         </section>
 
         <section class="section card">
-            <h2>Enjeu n°3 : Apprendre à gagner, mais surtout à perdre</h2>
+            <h2>Enjeu n°3 : apprendre à gagner, mais surtout à perdre</h2>
             <p>
                 <strong>Le contexte :</strong> Le jeu vidéo est un formidable vecteur d'émotions : la joie de la victoire, mais aussi la frustration de l'échec, le stress des moments décisifs. Mal gérées, ces émotions peuvent mener à des réactions de colère ("ragequit"), à une mauvaise estime de soi, et dans les cas les plus sérieux, à un rapport anxieux ou obsessionnel au jeu, un risque qui concerne jusqu'à 12% des adolescents.
             </p>
@@ -85,7 +85,7 @@
         </section>
 
         <section class="section sources card" id="sources">
-            <h2>Pour aller plus loin : Sources principales</h2>
+            <h2>Pour aller plus loin : sources principales</h2>
             <ol>
               <li id="source1">European Commission – Digital Economy and Society Index, 2024. <a href="https://digital-strategy.ec.europa.eu/en/policies/desi" target="_blank" rel="noopener">Lien</a></li>
               <li id="source2">World Health Organization, « Teens and Screens » report, 2024. <a href="https://www.who.int/europe/news/item/23-05-2024-new-who-report-teens-screens-digital-media" target="_blank" rel="noopener">Lien</a></li>
