--- a/mentions.html
+++ b/mentions.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Ludus Mentis – Mentions légales</title>
+  <title>Ludus Mentis – mentions légales</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
