--- a/methodologie.html
+++ b/methodologie.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Ludus Mentis – Notre méthodologie</title>
+  <title>Ludus Mentis – notre méthodologie</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
