--- a/a-propos.html
+++ b/a-propos.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Ludus Mentis – À propos</title>
+  <title>Ludus Mentis – à propos</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
