--- a/faq.html
+++ b/faq.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Ludus Mentis – FAQ</title>
+  <title>Ludus Mentis – faq</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
