--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Ludus Mentis – Accueil</title>
+    <title>Ludus Mentis – accueil</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
@@ -66,7 +66,7 @@
     </section>
 
       <section class="section card" style="text-align:center;">
-  <h2>Des questions ? Parlons-en !</h2>
+  <h2>Des questions ? parlons-en !</h2>
   <p>
     <a href="faq.html">Consultez notre FAQ</a> ou <a href="contact.html">contactez-nous directement</a>.<br>
     Nous répondons à toutes vos préoccupations de parent.
