--- a/faq.html
+++ b/faq.html
@@ -1,48 +1,42 @@
-<!DOCTYPE html>
+Html
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Ludus Mentis – faq</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
+<meta charset="utf-8"/>
+<title>Ludus mentis – faq</title>
+<link href="assets/css/styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <div id="header"></div>
-  <main class="container">
-
-    <section class="section card">
-      <h1>Foire aux questions</h1>
-    </section>
-
-    <section class="section card">
-      <h2>À qui s’adresse Ludus Mentis&nbsp;?</h2>
-      <p>
-        Aux jeunes de 10 à 15 ans, quels que soient leur niveau de jeu ou leur profil : passionnés ou simples curieux du jeu vidéo !
+<div id="header"></div>
+<main class="container">
+<section class="section card">
+<h1>Foire aux questions</h1>
+</section>
+<section class="section card">
+<h2>À qui s’adresse Ludus Mentis ?</h2>
+<p>
+        aux jeunes de 10 à 15 ans, quels que soient leur niveau de jeu ou leur profil : passionnés ou simples curieux du jeu vidéo !
       </p>
-    </section>
-
-    <section class="section card">
-      <h2>Est-ce qu’il y a de la compétition ?</h2>
-      <p>
-        La priorité est donnée à la coopération, au respect et à la progression de chacun. Certains ateliers proposent du challenge en équipe, mais sans esprit toxique de compétition.
+</section>
+<section class="section card">
+<h2>Est-ce qu’il y a de la compétition ?</h2>
+<p>
+        la priorité est donnée à la coopération, au respect et à la progression de chacun. certains ateliers proposent du challenge en équipe, mais sans esprit toxique de compétition.
       </p>
-    </section>
-
-    <section class="section card">
-      <h2>Comment s’inscrire ?</h2>
-      <p>
-        Il suffit de remplir le <a href="contact.html">formulaire de contact</a> ou d’envoyer un mail à info@ludusmentis.be. Nous vous répondrons rapidement !
+</section>
+<section class="section card">
+<h2>Comment s’inscrire ?</h2>
+<p>
+        il suffit de remplir le <a href="contact.html">Formulaire de contact</a> ou d’envoyer un mail à info@ludusmentis.be. nous vous répondrons rapidement !
       </p>
-    </section>
-
-    <section class="section card">
-      <h2>Et pour les parents inquiets ?</h2>
-      <p>
-        Le cadre est sécurisé et la transparence avec les familles est totale. Vous pouvez nous contacter à tout moment.
+</section>
+<section class="section card">
+<h2>Et pour les parents inquiets ?</h2>
+<p>
+        le cadre est sécurisé et la transparence avec les familles est totale. vous pouvez nous contacter à tout moment.
       </p>
-    </section>
-
-  </main>
-  <div id="footer"></div>
-  <script src="assets/js/include.js"></script>
+</section>
+</main>
+<div id="footer"></div>
+<script src="assets/js/include.js"></script>
 </body>
 </html>
