--- a/academie.html
+++ b/academie.html
@@ -1,91 +1,85 @@
-<!DOCTYPE html>
+Html
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Notre académie : le programme détaillé | Ludus Mentis</title>
-  <meta name="description" content="Découvrez le programme de l'académie Ludus Mentis : déroulement d'une session type, piliers pédagogiques, et compétences développées par votre enfant.">
-  <link rel="stylesheet" href="assets/css/styles.css">
+<meta charset="utf-8"/>
+<title>Notre académie : le programme détaillé | Ludus Mentis</title>
+<meta content="Découvrez le programme de l'académie Ludus Mentis : déroulement d'une session type, piliers pédagogiques, et compétences développées par votre enfant." name="description"/>
+<link href="assets/css/styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <div id="header"></div>
-  <main class="container">
-
-    <section class="section hero">
-      <h1>L'académie : bien plus que du jeu vidéo</h1>
-      <p>
-        Notre académie est un espace d'exploration où le jeu devient un prétexte pour grandir. Conçu pour les <strong>jeunes de 10 à 15 ans</strong>, notre programme unique tisse ensemble jeu coopératif, ateliers de développement personnel et activités créatives pour une expérience riche et équilibrée.
+<div id="header"></div>
+<main class="container">
+<section class="section hero">
+<h1>L'académie : bien plus que du jeu vidéo</h1>
+<p>
+        notre académie est un espace d'exploration où le jeu devient un prétexte pour grandir. conçu pour les <strong>Jeunes de 10 à 15 ans</strong>, notre programme unique tisse ensemble jeu coopératif, ateliers de développement personnel et activités créatives pour une expérience riche et équilibrée.
       </p>
-    </section>
-
-    <section class="section card">
-      <h2>Le déroulement d'une session type chez Ludus Mentis</h2>
-      <p>Pour que vous puissiez vous projeter, voici à quoi ressemble un atelier classique au sein de l'académie :</p>
-      <ol>
-        <li>
-          <strong>Accueil et Échauffement (15 min) :</strong> On commence par un "ice-breaker" ou un petit jeu collectif hors écran pour briser la glace, se mettre en condition et définir l'objectif de la séance.
+</section>
+<section class="section card">
+<h2>Le déroulement d'une session type chez Ludus Mentis</h2>
+<p>Pour que vous puissiez vous projeter, voici à quoi ressemble un atelier classique au sein de l'académie :</p>
+<ol>
+<li>
+<strong>Accueil et échauffement (15 min) :</strong> on commence par un "ice-breaker" ou un petit jeu collectif hors écran pour briser la glace, se mettre en condition et définir l'objectif de la séance.
         </li>
-        <li>
-          <strong>Session de Jeu Coopératif (45 min) :</strong> C'est le cœur de l'atelier. En équipe, les jeunes se lancent dans une mission sur un jeu comme <em>Overcooked</em> ou <em>Rocket League</em>. L'animateur n'est pas là pour donner les solutions, mais pour observer les dynamiques de groupe, les stratégies de communication et les réactions face au défi.
+<li>
+<strong>Session de jeu coopératif (45 min) :</strong> c'est le cœur de l'atelier. en équipe, les jeunes se lancent dans une mission sur un jeu comme <em>Overcooked</em> ou <em>Rocket league</em>. l'animateur n'est pas là pour donner les solutions, mais pour observer les dynamiques de groupe, les stratégies de communication et les réactions face au défi.
         </li>
-        <li>
-          <strong>Débriefing et Analyse en Groupe (30 min) :</strong> C'est le moment le plus important. Guidés par l'animateur, les jeunes échangent sur leur partie. Qu'est-ce qui a bien fonctionné ? Quelles difficultés ont-ils rencontrées ? Comment auraient-ils pu mieux communiquer ? On applique ici notre méthode du <strong>cycle de Kolb</strong> pour transformer l'expérience de jeu en apprentissage concret.
+<li>
+<strong>Débriefing et analyse en groupe (30 min) :</strong> c'est le moment le plus important. guidés par l'animateur, les jeunes échangent sur leur partie. qu'est-ce qui a bien fonctionné ? quelles difficultés ont-ils rencontrées ? comment auraient-ils pu mieux communiquer ? on applique ici notre méthode du <strong>Cycle de kolb</strong> pour transformer l'expérience de jeu en apprentissage concret.
         </li>
-        <li>
-          <strong>Pause Active et Atelier Créatif (30 min) :</strong> On quitte les écrans ! Place à une activité physique (exergaming, jeux de ballon) ou à un atelier "tech-free" pour stimuler la créativité et le corps, et assurer un équilibre sain.
+<li>
+<strong>Pause active et atelier créatif (30 min) :</strong> on quitte les écrans ! place à une activité physique (exergaming, jeux de ballon) ou à un atelier "tech-free" pour stimuler la créativité et le corps, et assurer un équilibre sain.
         </li>
-      </ol>
-    </section>
-
-    <section class="section card">
-      <h2>Nos piliers pédagogiques : ce qui fait notre différence</h2>
-      <p>Notre programme ne se contente pas d'occuper les jeunes. Il repose sur des fondations solides, conçues pour leur épanouissement.</p>
-      <ul>
-        <li>
-          <strong>La Pédagogie par l'Action :</strong> On apprend mieux en faisant. Le jeu n'est pas une récompense, c'est le support de l'apprentissage.
+</ol>
+</section>
+<section class="section card">
+<h2>Nos piliers pédagogiques : ce qui fait notre différence</h2>
+<p>Notre programme ne se contente pas d'occuper les jeunes. il repose sur des fondations solides, conçues pour leur épanouissement.</p>
+<ul>
+<li>
+<strong>La pédagogie par l'action :</strong> on apprend mieux en faisant. le jeu n'est pas une récompense, c'est le support de l'apprentissage.
         </li>
-        <li>
-          <strong>La Bienveillance avant la Performance :</strong> Il n'y a ni classement, ni jugement. Chaque jeune progresse à son rythme dans un environnement où l'erreur est perçue comme une opportunité d'apprendre.
+<li>
+<strong>La bienveillance avant la performance :</strong> il n'y a ni classement, ni jugement. chaque jeune progresse à son rythme dans un environnement où l'erreur est perçue comme une opportunité d'apprendre.
         </li>
-        <li>
-          <strong>L'Intelligence Collective :</strong> Nous privilégions des jeux où la réussite dépend de la coopération. Les jeunes découvrent que l'on est plus fort ensemble et apprennent à valoriser les compétences de chacun.
+<li>
+<strong>L'intelligence collective :</strong> nous privilégions des jeux où la réussite dépend de la coopération. les jeunes découvrent que l'on est plus fort ensemble et apprennent à valoriser les compétences de chacun.
         </li>
-        <li>
-          <strong>L'implication des Parents :</strong> Vous faites partie de l'aventure. Des rencontres et des bilans réguliers sont organisés pour assurer une parfaite transparence et aligner nos efforts avec les vôtres.
+<li>
+<strong>L'implication des parents :</strong> vous faites partie de l'aventure. des rencontres et des bilans réguliers sont organisés pour assurer une parfaite transparence et aligner nos efforts avec les vôtres.
         </li>
-      </ul>
-    </section>
-    
-    <section class="section card">
-      <h2>Les résultats concrets pour votre enfant</h2>
-      <p>Au-delà du plaisir de jouer, notre objectif est le développement de compétences humaines essentielles pour aujourd'hui et pour demain :</p>
-      <ul>
-        <li>
-          <strong>Plus de confiance en soi :</strong> En osant prendre des initiatives et en voyant l'impact de ses actions, le jeune renforce son estime de lui.
+</ul>
+</section>
+<section class="section card">
+<h2>Les résultats concrets pour votre enfant</h2>
+<p>Au-delà du plaisir de jouer, notre objectif est le développement de compétences humaines essentielles pour aujourd'hui et pour demain :</p>
+<ul>
+<li>
+<strong>Plus de confiance en soi :</strong> en osant prendre des initiatives et en voyant l'impact de ses actions, le jeune renforce son estime de lui.
         </li>
-        <li>
-          <strong>Une meilleure communication :</strong> Il apprend à exprimer ses idées clairement, à écouter celles des autres et à donner un feedback constructif.
+<li>
+<strong>Une meilleure communication :</strong> il apprend à exprimer ses idées clairement, à écouter celles des autres et à donner un feedback constructif.
         </li>
-        <li>
-          <strong>Une gestion du stress améliorée :</strong> Il expérimente des situations de stress dans un cadre sécurisé et apprend à garder son calme pour atteindre un objectif.
+<li>
+<strong>Une gestion du stress améliorée :</strong> il expérimente des situations de stress dans un cadre sécurisé et apprend à garder son calme pour atteindre un objectif.
         </li>
-        <li>
-          <strong>Un véritable esprit d'équipe :</strong> Il développe son empathie et sa capacité à collaborer avec bienveillance pour un but commun.
+<li>
+<strong>Un véritable esprit d'équipe :</strong> il développe son empathie et sa capacité à collaborer avec bienveillance pour un but commun.
         </li>
-      </ul>
-    </section>
-    
-    <section class="section card" style="text-align:center;">
-        <h2>Prêt à rejoindre l'aventure ?</h2>
-        <p>
-            Les places sont limitées pour garantir un accompagnement de qualité.
-            <br>
-            Contactez-nous pour toute question ou pour procéder à une demande d'inscription.
+</ul>
+</section>
+<section class="section card" style="text-align:center;">
+<h2>Prêt à rejoindre l'aventure ?</h2>
+<p>
+            les places sont limitées pour garantir un accompagnement de qualité.
+            <br/>
+            contactez-nous pour toute question ou pour procéder à une demande d'inscription.
         </p>
-        <a href="contact.html" class="btn">Je veux plus d'infos</a>
-    </section>
-
-  </main>
-  <div id="footer"></div>
-  <script src="assets/js/include.js"></script>
+<a class="btn" href="contact.html">Je veux plus d'infos</a>
+</section>
+</main>
+<div id="footer"></div>
+<script src="assets/js/include.js"></script>
 </body>
 </html>
