--- a/concept.html
+++ b/concept.html
@@ -1,85 +1,75 @@
-<!DOCTYPE html>
+Html
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Notre concept : le jeu vidéo au service du développement | Ludus Mentis</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
+<meta charset="utf-8"/>
+<title>Notre concept : le jeu vidéo au service du développement | Ludus Mentis</title>
+<link href="assets/css/styles.css" rel="stylesheet"/>
 </head>
 <body>
-
-  <div id="header"></div>
-
-  <main class="container">
-
-    <section class="section hero">
-      <h1>Transformer le plaisir de jouer en compétences pour la vie</h1>
-      <p>
-        Chez Ludus Mentis, nous partons d'une conviction simple : la passion des jeunes pour le jeu vidéo est une énergie formidable. Plutôt que de la freiner, nous la canalisons. Nous avons créé un espace où le jeu devient un puissant levier d'apprentissage, encadré par des professionnels bienveillants.
+<div id="header"></div>
+<main class="container">
+<section class="section hero">
+<h1>Transformer le plaisir de jouer en compétences pour la vie</h1>
+<p>
+        chez Ludus Mentis, nous partons d'une conviction simple : la passion des jeunes pour le jeu vidéo est une énergie formidable. plutôt que de la freiner, nous la canalisons. nous avons créé un espace où le jeu devient un puissant levier d'apprentissage, encadré par des professionnels bienveillants.
       </p>
-    </section>
-
-    <section class="section card">
-      <h2>Des pixels aux compétences humaines</h2>
-      <p>
-          Au-delà des scores et des classements, chaque partie est une occasion de développer des savoir-être essentiels. Voici ce que votre enfant apprend concrètement avec nous :
+</section>
+<section class="section card">
+<h2>Des pixels aux compétences humaines</h2>
+<p>
+          au-delà des scores et des classements, chaque partie est une occasion de développer des savoir-être essentiels. voici ce que votre enfant apprend concrètement avec nous :
       </p>
-      <ul>
-        <li>💬 <strong>Mieux communiquer :</strong> Exprimer ses idées clairement, écouter activement et se coordonner avec ses coéquipiers.</li>
-        <li>🧘 <strong>Gérer ses émotions :</strong> Apprendre à gérer la pression d'un défi, la frustration de l'échec et la joie du succès collectif.</li>
-        <li>🎯 <strong>Développer sa persévérance :</strong> Se fixer des objectifs en équipe, élaborer une stratégie et persévérer pour l'atteindre.</li>
-        <li>🫱 <strong>Renforcer l'esprit d'équipe :</strong> S’intégrer à un groupe, faire confiance et mériter la confiance des autres, avec respect et empathie.</li>
-      </ul>
-    </section>
-
-    <section class="section card">
-      <h2>Nos outils pédagogiques : des jeux triés sur le volet</h2>
-      <p>
-        Tous les jeux ne se valent pas. Nous sélectionnons rigoureusement des titres reconnus pour leur potentiel coopératif et éducatif. Ce ne sont pas des "jeux éducatifs" classiques, mais de vrais jeux populaires, utilisés comme supports d'apprentissage :
+<ul>
+<li>💬 <strong>Mieux communiquer :</strong> exprimer ses idées clairement, écouter activement et se coordonner avec ses coéquipiers.</li>
+<li>🧘 <strong>Gérer ses émotions :</strong> apprendre à gérer la pression d'un défi, la frustration de l'échec et la joie du succès collectif.</li>
+<li>🎯 <strong>Développer sa persévérance :</strong> se fixer des objectifs en équipe, élaborer une stratégie et persévérer pour l'atteindre.</li>
+<li>🫱 <strong>Renforcer l'esprit d'équipe :</strong> s’intégrer à un groupe, faire confiance et mériter la confiance des autres, avec respect et empathie.</li>
+</ul>
+</section>
+<section class="section card">
+<h2>Nos outils pédagogiques : des jeux triés sur le volet</h2>
+<p>
+        tous les jeux ne se valent pas. nous sélectionnons rigoureusement des titres reconnus pour leur potentiel coopératif et éducatif. ce ne sont pas des "jeux éducatifs" classiques, mais de vrais jeux populaires, utilisés comme supports d'apprentissage :
       </p>
-      <ul>
-        <li>
-          <strong>Overcooked :</strong> Un jeu de cuisine frénétique qui est une véritable masterclass en communication et en gestion du stress sous pression. Impossible de réussir sans s'entraider.
+<ul>
+<li>
+<strong>Overcooked :</strong> un jeu de cuisine frénétique qui est une véritable masterclass en communication et en gestion du stress sous pression. impossible de réussir sans s'entraider.
         </li>
-        <li>
-          <strong>Keep Talking and Nobody Explodes :</strong> Le jeu de communication par excellence. Un joueur a la bombe, les autres ont le manuel. L'écoute et la clarté sont une question de survie (virtuelle) !
+<li>
+<strong>Keep talking and nobody explodes :</strong> le jeu de communication par excellence. un joueur a la bombe, les autres ont le manuel. l'écoute et la clarté sont une question de survie (virtuelle) !
         </li>
-        <li>
-            <strong>Rocket League :</strong> Derrière ce jeu de "voitures-foot" se cache un besoin constant d'anticipation, de positionnement et de communication non-verbale pour fonctionner en équipe.
+<li>
+<strong>Rocket league :</strong> derrière ce jeu de "voitures-foot" se cache un besoin constant d'anticipation, de positionnement et de communication non-verbale pour fonctionner en équipe.
         </li>
-      </ul>
-    </section>
-
-    <section class="section card">
-        <h2>Comment le jeu devient-il apprentissage ?</h2>
-        <p>
-            C'est là que réside notre secret : <strong>l'accompagnement humain</strong>. Le jeu n'est que la première étape.
+</ul>
+</section>
+<section class="section card">
+<h2>Comment le jeu devient-il apprentissage ?</h2>
+<p>
+            c'est là que réside notre secret : <strong>L'accompagnement humain</strong>. le jeu n'est que la première étape.
         </p>
-        <p>
-            Chaque session de jeu est suivie d'un <strong>débriefing en groupe</strong>, mené par nos animateurs formés. C'est un moment d'échange où l'on met des mots sur ce qui a été vécu : "Comment aurions-nous pu mieux nous organiser ?", "Qu'as-tu ressenti à ce moment précis ?". C'est en reliant l'action (le jeu) à la réflexion (le débrief) que les compétences s'ancrent durablement.
+<p>
+            chaque session de jeu est suivie d'un <strong>Débriefing en groupe</strong>, mené par nos animateurs formés. c'est un moment d'échange où l'on met des mots sur ce qui a été vécu : "comment aurions-nous pu mieux nous organiser ?", "qu'as-tu ressenti à ce moment précis ?". c'est en reliant l'action (le jeu) à la réflexion (le débrief) que les compétences s'ancrent durablement.
         </p>
-    </section>
-
-    <section class="section card">
-      <h2>Notre vision : bâtir des champions de la vie, puis de l'esport</h2>
-      <p>
-        Notre première mission est de construire des bases solides : bien-être, confiance en soi et intelligence collective. C'est la vocation de notre Académie.
+</section>
+<section class="section card">
+<h2>Notre vision : bâtir des champions de la vie, puis de l'esport</h2>
+<p>
+        notre première mission est de construire des bases solides : bien-être, confiance en soi et intelligence collective. c'est la vocation de notre académie.
       </p>
-      <p>
-        Dans un second temps, Ludus Mentis ambitionne d'ouvrir une filière esport plus compétitive. Mais l'accès à cette filière sera sélectif, non pas sur le niveau de jeu, mais sur les qualités humaines : seuls les jeunes ayant démontré un fair-play exemplaire, une grande maturité et une bonne gestion de leurs émotions pourront y accéder. Pour nous, la santé et l'équilibre primeront toujours sur la performance.
+<p>
+        dans un second temps, Ludus Mentis ambitionne d'ouvrir une filière esport plus compétitive. mais l'accès à cette filière sera sélectif, non pas sur le niveau de jeu, mais sur les qualités humaines : seuls les jeunes ayant démontré un fair-play exemplaire, une grande maturité et une bonne gestion de leurs émotions pourront y accéder. pour nous, la santé et l'équilibre primeront toujours sur la performance.
       </p>
-    </section>
-    
-    <section class="section card" style="text-align:center;">
-        <h2>Curieux de voir notre programme en action ?</h2>
-        <p>
-            Découvrez en détail comment se déroule un atelier au sein de notre académie.
+</section>
+<section class="section card" style="text-align:center;">
+<h2>Curieux de voir notre programme en action ?</h2>
+<p>
+            découvrez en détail comment se déroule un atelier au sein de notre académie.
         </p>
-        <a href="academie.html" class="btn">Explorer l'Académie</a>
-    </section>
-
-  </main>
-
-  <div id="footer"></div>
-  <script src="assets/js/include.js"></script>
+<a class="btn" href="academie.html">Explorer l'académie</a>
+</section>
+</main>
+<div id="footer"></div>
+<script src="assets/js/include.js"></script>
 </body>
 </html>
