--- a/contact.html
+++ b/contact.html
@@ -1,44 +1,39 @@
-<!DOCTYPE html>
+Html
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Ludus Mentis – contact</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
+<meta charset="utf-8"/>
+<title>Ludus mentis – contact</title>
+<link href="assets/css/styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <div id="header"></div>
-  <main class="container">
-
-    <section class="section card">
-      <h1>Contactez-nous</h1>
-      <p>
-        Une question, une demande d’inscription ou d’information ? <br>
-        L’équipe Ludus Mentis vous répond rapidement.
+<div id="header"></div>
+<main class="container">
+<section class="section card">
+<h1>Contactez-nous</h1>
+<p>
+        une question, une demande d’inscription ou d’information ? <br/>
+        l’équipe Ludus Mentis vous répond rapidement.
       </p>
-      <form class="contact-form" id="contactForm" action="https://formspree.io/f/mdkdwzoy" method="POST">
-        <label for="nom">Votre nom *</label>
-        <input type="text" id="nom" name="nom" required>
-
-        <label for="email">Votre email *</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="message">Votre message *</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
-
-        <button type="submit" class="cta-button">Envoyer</button>
-        <p id="form-success" class="form-success" style="display:none; color: #357a3c; font-weight: 600; margin-top: 1em;">
-          Merci, votre message a bien été envoyé !
+<form action="https://formspree.io/f/mdkdwzoy" class="contact-form" id="contactForm" method="POST">
+<label for="nom">Votre nom *</label>
+<input id="nom" name="nom" required="" type="text"/>
+<label for="email">Votre email *</label>
+<input id="email" name="email" required="" type="email"/>
+<label for="message">Votre message *</label>
+<textarea id="message" name="message" required="" rows="5"></textarea>
+<button class="cta-button" type="submit">Envoyer</button>
+<p class="form-success" id="form-success" style="display:none; color: #357a3c; font-weight: 600; margin-top: 1em;">
+          merci, votre message a bien été envoyé !
         </p>
-      </form>
-      <p style="margin-top: 2em; color: #876b4c;">
-        Ou contactez-nous par email : <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a>
-      </p>
-    </section>
-
-  </main>
-  <div id="footer"></div>
-  <script src="assets/js/include.js"></script>
-  <script>
+</form>
+<p style="margin-top: 2em; color: #876b4c;">
+        ou contactez-nous par email : <a href="mailto:info@ludusmentis.be">Info@ludusmentis.be</a>
+</p>
+</section>
+</main>
+<div id="footer"></div>
+<script src="assets/js/include.js"></script>
+<script>
     // Gestion feedback formulaire (Formspree)
     document.addEventListener('DOMContentLoaded', function() {
       var form = document.getElementById('contactForm');
