--- a/methodologie.html
+++ b/methodologie.html
@@ -1,47 +1,40 @@
-<!DOCTYPE html>
+Html
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Ludus Mentis – notre méthodologie</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
+<meta charset="utf-8"/>
+<title>Ludus mentis – notre méthodologie</title>
+<link href="assets/css/styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <div id="header"></div>
-  <main class="container">
-
-    <section class="section card">
-      <h1>Notre méthodologie</h1>
-      <p>
-        Ludus Mentis s’appuie sur des méthodes pédagogiques modernes : cycle de Kolb, pédagogie par l’action, approche bienveillante et valorisation du collectif.
-      </p>
-    </section>
-
-    <section class="section card">
-      <h2>Le cycle d’apprentissage</h2>
-      <ul>
-        <li>Expérimentation : jouer ensemble à des jeux conçus pour coopérer</li>
-        <li>Observation et feedback : échanges sur les comportements, points forts, axes de progrès</li>
-        <li>Conceptualisation : tirer des enseignements pour le jeu… et pour la vraie vie</li>
-        <li>Application : tester ses nouvelles compétences lors de la prochaine séance</li>
-      </ul>
-    </section>
-
+<div id="header"></div>
+<main class="container">
 <section class="section card">
-  <h2>Notre réponse concrète</h2>
-  <ul>
-    <li><strong>Sessions actives :</strong> jeux coopératifs + exergaming (Ring Fit, Just Dance…), ateliers bien-être (sommeil, nutrition, gestion du stress).</li>
-    <li><strong>Pédagogie innovante :</strong> débriefings en groupe pour apprendre de chaque partie (cycle de Kolb).</li>
-    <li><strong>Charte d’éthique :</strong> co-construite avec les jeunes, pour favoriser le respect et l’empathie.</li>
-    <li><strong>Parentalité positive :</strong> rencontres, ateliers, et bilan en fin de cycle avec les familles.</li>
-    <li><strong>Un “conservatoire numérique” :</strong> une académie structurée, rigoureuse, inclusive, ouverte à tous les jeunes.</li>
-  </ul>
+<h1>Notre méthodologie</h1>
+<p>
+        Ludus Mentis s’appuie sur des méthodes pédagogiques modernes : cycle de kolb, pédagogie par l’action, approche bienveillante et valorisation du collectif.
+      </p>
 </section>
-
-
-    
-
-  </main>
-  <div id="footer"></div>
-  <script src="assets/js/include.js"></script>
+<section class="section card">
+<h2>Le cycle d’apprentissage</h2>
+<ul>
+<li>Expérimentation : jouer ensemble à des jeux conçus pour coopérer</li>
+<li>Observation et feedback : échanges sur les comportements, points forts, axes de progrès</li>
+<li>Conceptualisation : tirer des enseignements pour le jeu… et pour la vraie vie</li>
+<li>Application : tester ses nouvelles compétences lors de la prochaine séance</li>
+</ul>
+</section>
+<section class="section card">
+<h2>Notre réponse concrète</h2>
+<ul>
+<li><strong>Sessions actives :</strong> jeux coopératifs + exergaming (ring fit, just dance…), ateliers bien-être (sommeil, nutrition, gestion du stress).</li>
+<li><strong>Pédagogie innovante :</strong> débriefings en groupe pour apprendre de chaque partie (cycle de kolb).</li>
+<li><strong>Charte d’éthique :</strong> co-construite avec les jeunes, pour favoriser le respect et l’empathie.</li>
+<li><strong>Parentalité positive :</strong> rencontres, ateliers, et bilan en fin de cycle avec les familles.</li>
+<li><strong>Un “conservatoire numérique” :</strong> une académie structurée, rigoureuse, inclusive, ouverte à tous les jeunes.</li>
+</ul>
+</section>
+</main>
+<div id="footer"></div>
+<script src="assets/js/include.js"></script>
 </body>
 </html>
